@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed integration between RFTools Control and RFTools Storage for the screen modules
+
 1.16-4.0.9:
 - Fixed a problem with the storage control module which wouldn't fit in the processor anymore
 
